payment method done

--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,4 @@ CLOUDINARY_NAME = "dha8kuyxv"
 JWT_SECRET = "vicky1994"
 ADMIN_EMAIL ="admin@gmail.com"
 ADMIN_PASSWORD = "admin123"
+STRIPE_SECRET_KEY="sk_test_tR3PYbcVNZZ796tH88S4VQ2u"
